--- a/serverless.yml
+++ b/serverless.yml
@@ -9,8 +9,8 @@ provider:
   name: aws
   runtime: nodejs8.10
   region: us-east-1
-  # deploymentBucket:
-  #   name: com.serverless.${self:provider.region}.8675309
+  deploymentBucket:
+    name: com.serverless.${self:provider.region}.8675309
 
 functions:
   status:
@@ -21,6 +21,10 @@ functions:
       KEY: ${self:custom.apiKey}
     memorySize: 256
     timeout: 60
+    events:
+      - http:
+          path: door/status
+          method: get
 
 plugins:
   - serverless-plugin-create-deployment-bucket
